Some fixes for missing dependecies.